syntax = "proto3";

package pb;

option go_package = "../pb";
import "proto/geo.proto";

message GeoTreeRequest {}

message GeoTreeResponse {
  repeated Geo geo = 1;
  bool status = 2;
  string message = 3;
}

service GeoReaderService{
  rpc RetrieveTreeGeo(GeoTreeRequest) returns (GeoTreeResponse) {};
}